--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-file-blocks": "^0.4.0",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-injector": "^0.6.0",
     "grunt-karma": "*",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
